--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<title>Accessible HTML</title>
 </head>
 <body>
-	Wunderlust Travel 
+	<header>
+	<h1>Wunderlust Travel</h1>
 (logo.png)
 Let Wunderlust Travel help you plan the trip of your dreams!
 
