--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 	<header>
 	<h1>Wunderlust Travel</h1>
-(logo.png)
+	<picture>
+		<img src="/images/logo-L.png" alt="beach logo with palm tree on water">
+	</picture>
 Let Wunderlust Travel help you plan the trip of your dreams!
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
