--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
 </head>
 <body>
 	<header>
+	<a href="#main" class="skip-link">Skip to Main Content</a>
 	<h1>Wunderlust Travel</h1>
+	
 	<picture>
+		<source media="(min-width: 1024px)" srcset="images/logo-L.png">
+        <source media="(max-width: 780px)" srcset="images/logo-M.png">
+        <source media="(max-width: 320px)" srcset="images/logo-S.png">
 		<img src="/images/logo-L.png" alt="beach logo with palm tree on water">
 	</picture>
-Let Wunderlust Travel help you plan the trip of your dreams!
 
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Destinations
-Inspirations
-Special
-Contact Us
+	<p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
 
+	<nav>
+		<ul>
+			<li><a href="#dest"></a>Destinations</a></li>
+			<li><a href="#insp"></a>Inspirations</a></li>
+			<li><a href="#special"></a>Special</a></li>
+			<li><a href="#contact"></a>Contact Us</a></li>
+		</ul>
+	</nav>
+	</header>
 Majorca
 Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.
 
