--- a/index.html
+++ b/index.html
@@ -30,23 +30,46 @@
 		</ul>
 	</nav>
 	</header>
-Majorca
-Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.
 
-majorca-waves.png
-majorca-beach.png
-majorca-cove.png
+	<main id="main-content">
+		<section id="majorca">
+			<h2>Majorca</h2>
+			<p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
+
+			<picture>
+				<source media="(min-width: 1024px)" srcset="images/majorca-waves-L.png">
+				<source media="(max-width: 780px)" srcset="images/majorca-waves-M.png">
+				<source media="(max-width: 320px)" srcset="images/majorca-waves-S.png">
+				<img src="images/majorca-waves-L.png" alt="majorca waves">
+			</picture>
+
+			<picture>
+				<source media="(min-width: 1024px)" srcset="images/majorca-beach-L.png">
+				<source media="(max-width: 780px)" srcset="images/majorca-beach-M.png">
+				<source media="(max-width: 320px)" srcset="images/majorca-beach-S.png">
+				<img src="images/majorca-beach-L.png" alt="majorca beach">
+			</picture>
+
+			<picture>
+				<source media="(min-width: 1024px)" srcset="images/majorca-cove-L.png">
+				<source media="(max-width: 780px)" srcset="images/majorca-cove-M.png">
+				<source media="(max-width: 320px)" srcset="images/majorca-cove-S.png">
+				<img src="images/majorca-cove-L.png" alt="majorca cove">
+			</picture>
+		</section>
 
 
-Plan Your Trip
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-How to Get there
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plane" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z" />
-</svg>
+		<section id="plan">
+			<h3>Plan Your Trip</h3>
+			<article>
+				<h4>How to Get there</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plane" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z" />
+				</svg>
 
-(href=”#”) (title=”Search for flights”)
+				<a href="#" title="Search for flights">
+					
 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
   <polyline points="9 6 15 12 9 18" />
