--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</section>
 
 
-		<section id="plan">
+		<section id="plan-trip">
 			<h3>Plan Your Trip</h3>
 			<article>
 				<h4>How to Get there</h4>
@@ -69,61 +69,76 @@
 				</svg>
 
 				<a href="#" title="Search for flights">
-					
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <polyline points="9 6 15 12 9 18" />
-</svg>
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Places to Stay
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" />
-  <circle cx="7" cy="10" r="1" />
-</svg>
+					<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<polyline points="9 6 15 12 9 18" />
+					</svg>
+				</a>
+			</article>
 
-(href=”#”) (title=”Search for Hotels”)
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <polyline points="9 6 15 12 9 18" />
-</svg>
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Things to do
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sailboat" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
-  <path d="M4 18l-1 -3h18l-1 3" />
-  <path d="M11 12h7l-7 -9v9" />
-  <line x1="8" y1="7" x2="6" y2="12" />
-</svg>
+			<article>
+                <h4>Places to Stay</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" />
+					<circle cx="7" cy="10" r="1" />
+				</svg>
 
-(href=”#”) (title=”Search for Activities”)
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <polyline points="9 6 15 12 9 18" />
-</svg>
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Where to Eat
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen-2" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
-</svg>
+				<a href="#" title="Search for Hotels">
+					<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<polyline points="9 6 15 12 9 18" />
+					</svg>
+				</a>
+			</article>
 
-(href=”#”) (title=”Search for Restaurants”) 
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <polyline points="9 6 15 12 9 18" />
-</svg>
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+			<article>
+                <h4>Things to do</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sailboat" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
+					<path d="M4 18l-1 -3h18l-1 3" />
+					<path d="M11 12h7l-7 -9v9" />
+					<line x1="8" y1="7" x2="6" y2="12" />
+				</svg>
 
+				<a href="#" title="Search for Activities">
+					<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<polyline points="9 6 15 12 9 18" />
+					</svg>
+				</a>
+			</article>
 
-Testimonials
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Miranda Blake
-miranda-blake.png
-Traveling From: London, England
-“I traveled here for business, but my stay was extended. Now it is my home.”
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+			<article>
+				<h4>Where to Eat</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen-2" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
+				</svg>
+
+				<a href="#" title="Search for Restaurants">
+					<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-right" width="40" height="40" viewBox="0 0 24 24" stroke-width="3" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+						<polyline points="9 6 15 12 9 18" />
+					</svg>
+				</a>
+			</article>
+		</section>
+
+		<section id="testimonials">
+			<h3>Testimonials</h3>
+			<article>
+				<h4>Miranda Blake</h4>
+				<picture>
+					<source media="(min-width: 1024px)" srcset="images/miranda-blake-L.png">
+					<source media="(min-width: 780px)" srcset="images/miranda-blake-M.png">
+					<source media="(min-width: 320px)" srcset="images/miranda-blake-S.png">
+					<img src="images/miranda-blake-L.png" alt="Miranda Blake">
+				</picture>
+				<p>Traveling From: London, England</p>
+				<p>“I traveled here for business, but my stay was extended. Now it is my home.”</p>
+			</article>
 Max Winter
 max-winter.png
 Traveling From: Berlin, Germany
