--- a/index.html
+++ b/index.html
@@ -139,37 +139,59 @@
 				<p>Traveling From: London, England</p>
 				<p>“I traveled here for business, but my stay was extended. Now it is my home.”</p>
 			</article>
-Max Winter
-max-winter.png
-Traveling From: Berlin, Germany
-“Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Inés Villegoes
-ines-villegoes.png
-Traveling From: Barcelona, Spain
-“A very safe environment for all travelers.”
 
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Carmen Lorenzo
-carmen-lorenzo.png
-Traveling From: Madrid, Spain
-“Live, laugh, love-- everything you need in Majorca.”
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+			<article>
+				<h4>Max Winter</h4>
+				<picture>
+					<source media="(min-width: 1024px)" srcset="images/max-winter-L.png">
+					<source media="(min-width: 780px)" srcset="images/max-winter-M.png">
+					<source media="(min-width: 320px)" srcset="images/max-winter-S.png">
+					<img src="images/max-winter-L.png" alt="Max Winter">
+				</picture>
+				<p>Traveling From: Berlin, Germany</p>
+				<p>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”</p>
+			</article>
 
+			<article>
+				<h4>Inés Villegoes</h4>
+				<picture>
+					<source media="(min-width: 1024px)" srcset="images/ines-villegoes-L.png">
+					<source media="(min-width: 780px)" srcset="images/ines-villegoes-M.png">
+					<source media="(min-width: 320px)" srcset="images/ines-villegoes-S.png">
+					<img src="images/ines-villegoes-L.png" alt="Inés Villegoes">
+				</picture>
+				<p>Traveling From: Barcelona, Spain</p>
+				<p>“A very safe environment for all travelers.”</p>
+			</article>
 
-About Your Destination
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Size
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ruler-2" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M17 3l4 4l-14 14l-4 -4z" />
-  <path d="M16 7l-1.5 -1.5" />
-  <path d="M13 10l-1.5 -1.5" />
-  <path d="M10 13l-1.5 -1.5" />
-  <path d="M7 16l-1.5 -1.5" />
-</svg>
+			<article>
+				<h4>Carmen Lorenzo</h4>
+				<picture>
+					<source media="(min-width: 1024px)" srcset="images/carmen-lorenzo-L.png">
+					<source media="(min-width: 780px)" srcset="images/carmen-lorenzo-M.png">
+					<source media="(min-width: 320px)" srcset="images/carmen-lorenzo-S.png">
+					<img src="images/carmen-lorenzo-L.png" alt="Carmen Lorenzo has long, dark brown hair and is wearing gold hoop earrings">
+				</picture>
+				<p>Traveling From: Madrid, Spain</p>
+				<p>“Live, laugh, love-- everything you need in Majorca.”</p>
+			</article>
+		</section>
 
-Size: 1,405 miles squared
+		<section id="about-dest">
+			<h3>About Your Destination</h3>
+			<article>
+				<h4>Size</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ruler-2" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<path d="M17 3l4 4l-14 14l-4 -4z" />
+					<path d="M16 7l-1.5 -1.5" />
+					<path d="M13 10l-1.5 -1.5" />
+					<path d="M10 13l-1.5 -1.5" />
+					<path d="M7 16l-1.5 -1.5" />
+				</svg>
+				
+				<p>Size: 1,405 miles squared</p>
+			</article>
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 Elevation
 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
