--- a/index.html
+++ b/index.html
@@ -192,39 +192,43 @@
 				
 				<p>Size: 1,405 miles squared</p>
 			</article>
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Elevation
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <line x1="12" y1="21" x2="12" y2="3" />
-  <path d="M15 6l-3 -3l-3 3" />
-  <line x1="9" y1="21" x2="15" y2="21" />
-</svg>
 
-Elevation: 4,741 feet
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Location
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <circle cx="12" cy="11" r="3" />
-  <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-</svg>
-Location: Mediterranean 
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Population
-<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <circle cx="9" cy="7" r="4" />
-  <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
-  <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-  <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
-</svg>
+			<article>
+				<h4>Elevation</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<line x1="12" y1="21" x2="12" y2="3" />
+					<path d="M15 6l-3 -3l-3 3" />
+					<line x1="9" y1="21" x2="15" y2="21" />
+				</svg>
+				<p>Elevation: 4,741 feet</p>
+			</article>
 
-Population: 923,608
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+			<article>
+				<h4>Location</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<circle cx="12" cy="11" r="3" />
+					<path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
+				</svg>
+				<p>Location: Mediterranean</p>
+			</article>
 
+			<article>
+				<h4>Population</h4>
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<circle cx="9" cy="7" r="4" />
+					<path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+					<path d="M16 3.13a4 4 0 0 1 0 7.75" />
+					<path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
+				</svg>
+				<p>Population: 923,608</p>
+			</article>
+		</section>
 
-Contact Us
+		<section id="contact">
+			<h3>Contact Us</h3>
 First Name (Enter first name)
 Last Name (Enter last name)
 
