--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-	<a href="#main" class="skip-link">Skip to Main Content</a>
+	<a href="#main-content" class="skip-link">Skip to Main Content</a>
 	<h1>Wunderlust Travel</h1>
 	
 	<picture>
