--- a/majorca.html
+++ b/majorca.html
@@ -2,6 +2,24 @@
 <html lang="en">
     <head>
 <!--         Add all required tags in the head here - meta tags for SEO, responsiveness, and with info about the page, etc., in addition to tags to create a card on Twitter with a large image and open graph tags to allow for sharing on other social media sites -->
+<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name= "Gabriela Castillo-Londono" content="Assignment 1.4-1.5">
+
+    <meta property="og:title" content="Wunderlust Travel">
+    <meta property="og:description" content="Let Wunderlust Travel help you plan the trip to Majorca your dreams">
+    <meta property="og:image" content="/images/majorca-waves-S.png">
+    <meta property="og:url" content="#">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@wunderlusttravel">
+    <meta name="twitter:creator" content="@wunderlusttravel">
+    <meta name="twitter:title" content="Wunderlust Travel: Majorca">
+    <meta name="twitter:description" content="Let Wunderlust Travel help you plan the trip to Majorca your dreams">
+    <meta name="twitter:image" content="/images/majorca-waves-S.png">
+
+	<title>Wunderlust Travel: Trip to Majorca</title>
+
     </head>
     <body>
 <!--         Reveiew the document and add the proper tags to all of the headings  throughout. Use the outline feature in the validator to ensure that these have been added correctly. See the image of the correct outline as a reference if you have questions 
