--- a/majorca.html
+++ b/majorca.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Let Wunderlust Travel help you plan the trip to Majorca your dreams">
     <meta property="og:image" content="/images/majorca-waves-S.png">
     <meta property="og:url" content="#">
-    
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@wunderlusttravel">
     <meta name="twitter:creator" content="@wunderlusttravel">
@@ -27,8 +27,8 @@
 
 Also review the alt text on all of the images to ensure that it is descriptive and appropriate-->
         <header>
-            <img src="images/logo.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun">
-            Wunderlust Travel
+            <img src="/images/logo-S.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun">
+            <h1>Wunderlust Travel</h1>
             <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
             <nav>
                 Main Navigation
