--- a/majorca.html
+++ b/majorca.html
@@ -6,18 +6,22 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name= "Gabriela Castillo-Londono" content="Assignment 1.4-1.5">
+    <meta name="robots" content="index,follow">
 
+    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Wunderlust Travel">
-    <meta property="og:description" content="Let Wunderlust Travel help you plan the trip to Majorca your dreams">
-    <meta property="og:image" content="/images/majorca-waves-S.png">
-    <meta property="og:url" content="#">
+    <meta property="og:description" content="Let Wunderlust Travel take you to the beautiful island of Majorca! Plan the trip of your dreams.">
+    <meta property="og:image" content="/images/majorca-beach-S.png">
+    <meta property="og:url" content="https://wwww.wunderlusttravel.com/majorca">
+
+    <!-- Twitter Card Tags -->
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@wunderlusttravel">
     <meta name="twitter:creator" content="@wunderlusttravel">
     <meta name="twitter:title" content="Wunderlust Travel: Majorca">
-    <meta name="twitter:description" content="Let Wunderlust Travel help you plan the trip to Majorca your dreams">
-    <meta name="twitter:image" content="/images/majorca-waves-S.png">
+    <meta name="twitter:description" content="Let Wunderlust Travel take you to the beautiful island of Majorca! Plan the trip of your dreams.">
+    <meta name="twitter:image" content="/images/majorca-beach-S.png">
 
 	<title>Wunderlust Travel: Trip to Majorca</title>
 
@@ -27,11 +31,11 @@
 
 Also review the alt text on all of the images to ensure that it is descriptive and appropriate-->
         <header>
-            <img src="/images/logo-S.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun">
+            <img src="images/logo-S.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun">
             <h1>Wunderlust Travel</h1>
             <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
             <nav>
-                Main Navigation
+                <h2>Main Navigation</h2>
                 <ul>
                     <li><a href="#">Destinations</a></li>
                     <li><a href="#">Inspirations</a></li>
@@ -40,9 +44,9 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                 </ul>
             </nav>
         </header>
-        <main>
+        <main id="main-content">
             <article>  
-                Majorca
+                <h2>Majorca</h2>
                 <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
                 <img src="images/majorca-waves.png" alt="Turquoise blue waters with white wave caps crashing against a rock cliff">
                 <img src="images/majorca-beach.png" alt="beach">
