--- a/majorca.html
+++ b/majorca.html
@@ -45,12 +45,15 @@ Also review the alt text on all of the images to ensure that it is descriptive a
             </nav>
         </header>
         <main id="main-content">
-            <article>  
+
+            <section id="Majorca">  
                 <h2>Majorca</h2>
                 <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
                 <img src="images/majorca-waves.png" alt="Turquoise blue waters with white wave caps crashing against a rock cliff">
                 <img src="images/majorca-beach.png" alt="Overhead view of majorca beach with turquoise waters">
                 <img src="images/majorca-cove.png" alt="Deep blue water leading to the horizon with the island and trees in the foreground">
+            </section>
+                
                 <section id="plan-trip">
                     <h3>Plan Your Trip</h3>
                     <article>
@@ -132,8 +135,8 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                         <p>923,608</p>
                     </article>
                 </section>
-                <section>
-                    Contact Us
+                <section id="contact">
+                    <h3>Contact Us</h3>
                     <form method="post" action="https://wp.zybooks.com/form-viewer.php">
                         <label for="fName">First Name<span>*</span></label>
                         <input type="text" name="fName" id="fName" autocomplete="given-name" required>
@@ -176,7 +179,6 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                         <input type="submit" name="mySubmit" id="mySubmit" value="Submit Form">
                     </form>
                 </section>
-            </article>
         </main>
         <footer>
             <p>Copyright &copy; 2021 Wunderlust Travel</p>
