--- a/majorca.html
+++ b/majorca.html
@@ -34,13 +34,13 @@ Also review the alt text on all of the images to ensure that it is descriptive a
             <img src="images/logo-S.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun">
             <h1>Wunderlust Travel</h1>
             <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
-            <nav>
+            <nav role="navigation">
                 <h2>Main Navigation</h2>
                 <ul>
-                    <li><a href="#">Destinations</a></li>
-                    <li><a href="#">Inspirations</a></li>
-                    <li><a href="#">Special</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#dest">Destinations</a></li>
+                    <li><a href="#insp">Inspirations</a></li>
+                    <li><a href="#special">Special</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
