--- a/majorca.html
+++ b/majorca.html
@@ -94,13 +94,13 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                         <q>I traveled here for business, but my stay was extended. Now it is my home.</q>
                     </article>
                     <article>
-                        <img src="images/max-winter.png" alt="Max Winter">
+                        <img src="images/max-winter.png" alt="Max Winter has light brown hair and a trimmed beard, wearing a casual brown shirt">
                         <h4>Max Winter</h4>
                         <p>Traveling From: Berlin, Germany</p>
                         <q>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</q>
                     </article>
                     <article>
-                        <img src="images/ines-villegoes.png" alt="lady person">
+                        <img src="images/ines-villegoes.png" alt="Inés Villegos has short, wavy brown hair, wearing a police uniform and is wearing small hoop earrings">
                         <h4>Inés Villegos</h4>
                         <p>Traveling From: Barcelona, Spain</p>
                         <q>A very safe environment for all travelers.</q>
