--- a/majorca.html
+++ b/majorca.html
@@ -131,7 +131,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                     </article>
                     <article>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="225" height="225" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><circle cx="9" cy="7" r="4" /><path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" /><path d="M16 3.13a4 4 0 0 1 0 7.75" /><path d="M21 21v-2a4 4 0 0 0 -3 -3.85" /></svg>
-                        Population
+                        <h4>Population</h4>
                         <p>923,608</p>
                     </article>
                 </section>
