--- a/majorca.html
+++ b/majorca.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name= "Gabriela Castillo-Londono" content="Assignment 1.4-1.5">
     <meta name="robots" content="index,follow">
+    <meta name="description" content="Discover Majorca, a stunning island with turquoise waters, golden sands, and vibrant culture. Plan your dream trip with Wunderlust Travel today!">
+    <meta name="keywords" content="Majorca, travel to Majorca, Majorca beaches, turquoise waters, golden sands, Majorca attractions, testimonials, summer destinations, Wunderlust Travel, island getaways, things to do in Majorca, Majorca restaurants">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Wunderlust Travel">
@@ -34,7 +36,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
             <img src="images/logo-S.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun">
             <h1>Wunderlust Travel</h1>
             <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
-            <nav role="navigation">
+            <nav role="navigation" aria-label="main navigation">
                 <h2>Main Navigation</h2>
                 <ul>
                     <li><a href="#dest">Destinations</a></li>
@@ -143,7 +145,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                         <label for="lName">Last Name<span>*</span></label>
                         <input type="text" name="lName" id="lName" autocomplete="family-name" required>
                         <fieldset>
-                            <legend>Contact Method<span>*</span></legend>
+                            <legend>Preferred Contact Method<span>*</span></legend>
                             <input type="radio" name="contactPref" id="prefEmail" required>
                             <label for="prefEmail">Email</label>
                             <input type="radio" name="contactPref" id="prefText">
@@ -162,7 +164,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                             <option value="granada">Granada</option>
                             <option value="ibiza">Ibiza</option>
                             <option value="madrid">Madrid</option>
-                            <option value="majora">Majora</option>
+                            <option value="majora">Majorca</option>
                             <option value="seville">Seville</option>
                             <option value="tenerife">Tenerife</option>
                             <option value="valencia">Valencia</option>
